Closed Bug 1960263 Opened 1 year ago Closed 1 year ago

mbox nsIMsgPluggableStore.discardNewMessage() doesn't always truncate mbox file

Categories

(MailNews Core :: General, defect)

defect

Tracking

(Not tracked)

RESOLVED FIXED
139 Branch

People

(Reporter: benc, Assigned: benc)

References

Details

Attachments

(1 file)

Due to Bug 1960252, nsMsgBrkMBoxStore::DiscardNewMessage() doesn't always correctly truncate the mbox file when a write is discarded.
So it won't clean up properly after errors, and might leave a partly-written message in the file.

There currently aren't any unit tests covering this, but there are some coming as part of Bug 1958052 (which is how I discovered this issue!)

Target Milestone: --- → 139 Branch

Pushed by heather@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/f3d13efe2538
Flush mbox file before truncation when rolling back bad writes. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: