Bug 1960263 - Flush mbox file before truncation when rolling back bad writes. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D245371

--HG--
extra : moz-landing-system : lando